--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Audiophile Ecommerce Website</title>
-    
+    <link rel="icon" type="image/x-icon" href="/public/assets/favicon-32x32.png">
     <!--css-->
     <link rel="stylesheet" href="./src/index.css">
 
